# rs-datasvc

./: .gitignore  Cargo.toml  README.md
src/: datahub.rs  datasets.rs  main.rs  platforms.rs  tags.rs
src/api/: mod.rs
src/api/v1/: datasets.rs  graphql.rs  mod.rs  params.rs  platforms.rs  queries.rs  tags.rs
src/schemas/: datahub.rs  datasets.rs  graphql.rs  mod.rs  paging.rs  platforms.rs  requests.rs  tags.rs
src/tags/: create.rs  mod.rs  remove.rs  tag_create.rs  tag_remove.rs
